--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <meta charset="UTF-8" />
+    <title>Eye care</title>
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>
+    <div class="container">
+      <div class="eye-care-app">
+        <img
+          src="./assets/eye.svg"
+          alt="Eye icon"
+          class="eye-care-app__image"
+        />
+        <h1 class="eye-care-app__title">EyeCare App</h1>
+        <p class="eye-care-app__text">
+          App will help you to keep your eyesight in good condition.<br />
+          It's extremely important if you are working in front of display for 8h
+          a day.
+        </p>
+        <p class="eye-care-app__text">
+          Once you click start button you'll be notified every 20 minutes to
+          look away for 20s.
+        </p>
+        <button class="eye-care-app__button" data-js="timerStart">
+          Start a timer!</button
+        ><br />
+        <button class="eye-care-app__button" data-js="timerStop">
+          Stop a timer!
+        </button>
+        <p class="eye-care-app__status" data-js="statusIndicator">Not active</p>
+      </div>
+    </div>
   </body>
 
   <script>
-    // You can also require other files to run in this process
-    require('./dist/renderer.js')
+    require('./dist/renderer.js');
   </script>
 </html>
